--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# poetry.lock
+poetry.lock
+
+# tensorboard
+lightning_logs/
+
+# poetry lock
+poetry.lock
+
 # VS Code
 *.code-workspace
 *.vscode
