--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ numpy = "^1.21.0"
 matplotlib = "^3.4.2"
 sklearn = "^0.0"
 seaborn = "^0.11.1"
+plotnine = "^0.8.0"
+pytorch-lightning = "^1.5.6"
+torch-tb-profiler = "^0.3.1"
+tqdm = "^4.62.3"
 
 [tool.poetry.dev-dependencies]
 ipykernel = "^5.5.5"
